# appliance-detection-from-current-logs

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  params.yaml.dev  params.yaml.prod  pyproject.toml  setup.cfg
.dvc/: config
data/: .gitignore
data/raw/: .gitignore  env_temp.xml.dvc  star_watt.xml.dvc
models/: .gitignore
shells/: run_loop.sh
src/: visualize.py
src/data/: convert_from_xml_to_parquet.py  convert_to_csv.py  merge_parquet_files.py  split_data.py
src/features/: build_features.py
src/models/: config.py  dataset.py  inference.py  model.py  predict.py  train_model.py  train_transformer.py
tests/: test_model.py  test_timeseriesdataset.py
新しいファイル `src/models/: dataset.py
