[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "u-masao" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"
dependencies = [
    "click>=8.1.8",
    "fastparquet>=2024.11.0",
    "lxml>=5.3.0",
    "mlflow>=2.19.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "torch>=2.5.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "dvc>=3.58.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
]
